fix: add nowrap to sidebar flair

--- a/src/extensions/community_extensions/_clippyPoint-styles.scss
+++ b/src/extensions/community_extensions/_clippyPoint-styles.scss
@@ -119,4 +119,9 @@ html.res-commentBoxes.res-commentBoxes-rounded .comment {
   }
 }
 
+.sidecontentbox {
+  li {
+    white-space: nowrap;
+  }
+}
 // End Clippy Point Flair styling - Link Flair
